# SonicCS2

./: .gitignore  CMakeLists.txt  CREDITS.md  GameEngine.h  assets.qrc  player.cpp  player.h
assets/: testplatform.tmx
include/: Block.h  Coin.h  Endpoint.h  Enemy.h  Entity.h  Fireball.h  GameEngine.h  GameObject.h  Hazard.h  LevelData.h  LevelMap.h  Levels.h  MovingPlatform.h  Physics.h  PowerUp.h  RayHit.h  Sfx.h  Spring.h  Sprites.h  bbill.h  goomba.h  level.h  mainwindow.h  player.h  player.h.autosave
src/: Block.cpp  Coin.cpp  Endpoint.cpp  Enemy.cpp  Entity.cpp  Fireball.cpp  GameObject.cpp  Hazard.cpp  MovingPlatform.cpp  Physics.cpp  PowerUp.cpp  Spring.cpp  bbill.cpp  gameView.cpp  gameView.cpp.autosave  goomba.cpp  level.cpp  main.cpp  mainwindow.cpp  player.cpp
